fix: receipt summary section alignment

--- a/front/src/scss/sale/receipt.scss
+++ b/front/src/scss/sale/receipt.scss
@@ -54,7 +54,10 @@
         }
         .label {
           text-align: right;
-          padding-right: 3rem;
+        }
+        .amount {
+          width: 6rem;
+          text-align: right;
         }
         .separator {
           width: 50%;
@@ -158,6 +161,7 @@
   .actions {
     height: 112px;
     display: flex;
+    padding: 0;
     .whitespace {
       width: var(--left-w);
     }
@@ -185,6 +189,21 @@
     button {
       margin: 0 0.5rem;
       width: 112px;
+    }
+  }
+}
+
+.discount-modal {
+  .content {
+    padding: 1rem;
+    width: 340px;
+    .left {
+      button {
+        margin-bottom: 0.5rem;
+      }
+    }
+    .right {
+      padding-left: 2rem;
     }
   }
 }
